tooling/nargo_cli/tests/snapshots/compile_failure/unconstrained_oracle/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
warning: unused function external_fn
  ┌─ src/main.nr:2:18
  │
2 │ unconstrained fn external_fn() -> Field {
  │                  ----------- unused function
  │

error: cannot find `anon` in this scope
  ┌─ src/main.nr:7:13
  │
7 │     let x = anon();
  │             ---- not found in this scope
  │

Aborting due to 1 previous error
