tooling/nargo_cli/tests/snapshots/compile_failure/unconstrained_oracle/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
warning: unused function external_fn
  ┌─ src/main.nr:2:18
  │
2 │ unconstrained fn external_fn() -> Field {
  │                  ----------- unused function
  │

error: cannot find `anon` in this scope
  ┌─ src/main.nr:7:13
  │
7 │     let x = anon();
  │             ---- not found in this scope
  │

Aborting due to 1 previous error
